# cylvionpp

./: .travis.yml  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/cylvionpp/: actor.h  card.h  card_factory.h  content.h  content_helper.h  dealer.h  dealer_helper.h  desertions.h  field.h  game.h  hand.h  intro.h  observer.h  operation.h  phase.h  stack.h  types.h
lib/src/: card.cpp  card_factory.cpp  card_impl.cpp  content.cpp  content_helper.cpp  dealer.cpp  dealer_helper.cpp  desertions.cpp  field.cpp  game.cpp  hand.cpp  intro.cpp  observer.cpp  operation.cpp  phase.cpp  stack.cpp  types.cpp
lib/src/card/: animal.cpp  animal.h  blaze.cpp  cylvan.cpp  cylvan.h  defense_animal.cpp  defense_animal.h  demobilization.cpp  desiccation.cpp  doves.cpp  elemental.cpp  elephant.cpp  fish.cpp  fountain.cpp  hedgehogs.cpp  none.cpp  not_none.cpp  not_none.h  on_field_cylvan.cpp  on_field_cylvan.h  owl.cpp  ravage.h  simoon.cpp  squirrels.cpp  stag.cpp  support.cpp  support.h  tree.cpp  whale.cpp
lib/src/operation/: blaze_elemental.cpp  decrease_mana.cpp  increase_edge.cpp  increase_mana.cpp  move_elemental.cpp  move_out_elemental.cpp  player_discard_hand.cpp  player_draw.cpp  put_cylvan.cpp  remove_from_discarded.cpp  remove_from_field.cpp  remove_ravage.cpp  remove_recuitment.cpp  reveal_ravage.cpp  reverse_ravage.cpp  summon_recuitment.cpp  take_recuitment.cpp
lib/src/phase/: defend.cpp  desertion.cpp  draw.cpp  last_move.cpp  move.cpp  recuitment.cpp  reveal.cpp  starting_draw.cpp  summon.cpp  summon.h  (+2 more)
lib/test/: empty_actor.h  empty_observer.h
(+37 files in other folders)
