PROJECT(libcylvionpp)

FILE(GLOB_RECURSE libcylvionpp_SOURCES src *.cpp)

SET(CMAKE_CXX_VISIBILITY_PRESET hidden)

SET(LIBRARY_NAME cylvionpp)
ADD_LIBRARY(${LIBRARY_NAME} SHARED ${libcylvionpp_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC include ${PROJECT_BINARY_DIR})

INCLUDE(GenerateExportHeader)
GENERATE_EXPORT_HEADER(${LIBRARY_NAME})

INSTALL(TARGETS cylvionpp LIBRARY DESTINATION lib)
#INSTALL(FILES
#  ${PROJECT_BINARY_DIR}/cylvionpp_export.h
#  PUBLIC_HEADER
#  DESTINATION ${INCLUDE_INSTALL_DIR}
#)
