PROJECT(libcylvionpp)

FILE(GLOB_RECURSE libcylvionpp_SOURCES src/*.cpp)

SET(CMAKE_CXX_VISIBILITY_PRESET hidden)

SET(LIBRARY_NAME cylvionpp)
ADD_LIBRARY(${LIBRARY_NAME} SHARED ${libcylvionpp_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC include ${PROJECT_BINARY_DIR})

INCLUDE(GenerateExportHeader)
GENERATE_EXPORT_HEADER(${LIBRARY_NAME})

INSTALL(TARGETS cylvionpp LIBRARY DESTINATION lib)

IF(BUILD_TESTING)
  INCLUDE(${cylvionpp_SOURCE_DIR}/cmake/Catch.cmake)
  AUX_SOURCE_DIRECTORY(test libcylvionpp_TEST_SOURCES)
  ADD_CATCH_TEST_EXECUTABLE(libcylvionpp_test ${libcylvionpp_TEST_SOURCES})
  TARGET_LINK_LIBRARIES(libcylvionpp_test cylvionpp)
ENDIF(BUILD_TESTING)
#INSTALL(FILES
#  ${PROJECT_BINARY_DIR}/cylvionpp_export.h
#  PUBLIC_HEADER
#  DESTINATION ${INCLUDE_INSTALL_DIR}
#)
